--- a/WebUIBlazor/WebUI.csproj
+++ b/WebUIBlazor/WebUI.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MudBlazor" Version="6.12.0" />
+    <PackageReference Include="Plotly.Blazor" Version="4.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MachineControlHub\MachineControlHub.csproj" />
   </ItemGroup>
 
