added new component
added promptandnotificationhandler so it can work globally no matter on which component we are to see the prompts and notifications from the printer

--- a/MachineControlHub/MachineControlHub.csproj
+++ b/MachineControlHub/MachineControlHub.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dumpify" Version="0.6.6" />
     <PackageReference Include="LibUsbDotNet" Version="2.2.29" />
     <PackageReference Include="System.IO.Ports" Version="7.0.0" />
   </ItemGroup>
