--- a/WebUIBlazor/WebUI.csproj
+++ b/WebUIBlazor/WebUI.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dumpify" Version="0.6.6" />
     <PackageReference Include="MudBlazor" Version="6.12.0" />
     <PackageReference Include="Plotly.Blazor" Version="4.1.0" />
   </ItemGroup>
